# leafeon-google-suite-tasks

./: .gitignore  .pdm-python  Procfile  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.yml
source/: endpoints.py  main.py  quickstart.py
source/comments_component/: comments.py
source/frontend/: package-lock.json  package.json
source/frontend/coverage/: clover.xml  coverage-final.json  lcov.info
source/frontend/coverage/lcov-report/: index.html
source/frontend/coverage/lcov-report/src/: App.js.html  GoogleDocsContext.js.html  index.html  index.js.html
source/frontend/coverage/lcov-report/src/components/: CommentBox.jsx.html  Comments.jsx.html  Navbar.jsx.html  Taskbox.jsx.html  Tasks.jsx.html  index.html  login.js.html  logout.js.html
source/frontend/src/: App.js  GoogleDocsContext.js  index.js
source/frontend/src/__tests__/: GoogleDocsContext.test.js
source/frontend/src/components/: CommentBox.jsx  Comments.jsx  Navbar.jsx  Taskbox.jsx  Tasks.jsx  login.js  logout.js
source/tasks_component/: tasks.py
source/tests/: test_endpoints.py  test_main.py
