[project]
name = "Leafeon Google Suite Tasks"
version = "0.0.0"
description = "An aggregator of assigned comments and Tasks."
authors = [{ name = "Ashley Goluoglu", email = "ag8529@nyu.edu" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "flask>=2.2.5",
    "requests>=2.25.1",
    "flask-cors>=4.0.1",
    "gunicorn>=22.0.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
python_requires = ">=3.8"

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=3.8,<4",
    "black==21.12b0",
    "click==8.0.4"  # to solve the dependency issue with black
]
test = ["pytest", "pytest-cov"]

# Optional configurations for other tools like black, flake8 as per the reference file
[tool.black]
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    .eggs
  | .git
  | .hg
  | .mypy_cache
  | .tox
  | .venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E501"
exclude = ".venv,.git,.hg,.mypy_cache,.tox,_build,buck-out,build,dist"

